Configured account creation and friends adding
- Template will not check if user is logged in before displaying anything
- Created publication and subscribtion of Profile
- Defined 'friendship'
- Created helper to return info of logged in user

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -4,8 +4,8 @@
             <div class="col-xs-1">&nbsp;</div>
             <div class="col-xs-4"><img src="/images/people1.png" width="100" height="100" /></div>
             <div class="col-xs-6">
-                <div class="dashboard-name">SAM TONG</div>
-                <div class="dashboard-post">SENIOR DESIGNER</div>
+                <div class="dashboard-name">{{userInfo.name}} {{userInfo.surname}}</div>
+                <div class="dashboard-post">{{userInfo.company}}</div>
                 <div class="dashboard-add-linkitter sm-top-margin"><button type="button" class="btn btn-primary">ADD LINKITTER</button></div>
             </div>
             <div class="col-xs-1">&nbsp;</div>
