--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -4,14 +4,12 @@
 			<div class="col-xs-12 col-md-6">
 				<div class="row">
 					<div class="col-xs-3"><img src="{{picture}}" alt="profile_pic" class="img-circle img-responsive"></div>
-					<div class="col-xs-9"><span><b>{{username}}</b></span><br><span>CEO of LINKIT Limited</span></div>
+					<div class="col-xs-9"><span><b>{{info.name}} {{info.surname}}</b></span><br><span>{{info.company}}</span></div>
 				</div>
 				<hr>
 				<div class="row">
 					<table class="table borderless">	
-						<tr><td>Birthday</td><td>{{birthday}}</td></tr>
-						<tr><td>Address</td><td>{{Address}}</td></tr>
-						<tr><td>Email</td><td>{{Email}}</td></tr>
+						<tr><td>Email</td><td>{{info.email}}</td></tr>
 						<tr><td>Phone</td><td>{{Phone}}</td></tr>
 						<tr><td>website</td><td>{{website}}</td></tr>
 					</table>
