--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -10,14 +10,14 @@
 				<div class="row">
 					<table class="table borderless">	
 						<tr><td>Email</td><td>{{info.email}}</td></tr>
-						<tr><td>Phone</td><td>{{Phone}}</td></tr>
-						<tr><td>website</td><td>{{website}}</td></tr>
+						<tr><td>Phone</td><td>{{info.Phone}}</td></tr>
+						<tr><td>website</td><td>{{info.website}}</td></tr>
 					</table>
 				</div>	
 			</div>
 			<div class="col-xs-12 col-md-12">
 				<hr>
-				<div class="row">Department of Computing</div>
+				<div class="row">{{info.company}}</div>
 				<hr>
 				<div class="row">This is a short description about me. kjsanhflkjhdsa jhsalkjfhlsa dsajhaslkd fsda jalhsfsadlhj dsh lkjjdsalkjdsafjds lkj jd dshjahfk hksdh kjds jsdjds kjh jhdsfdk jkshfd k </div>
 			</div>
