Implemented logic for friends by recentness
- A new document called RecentFriends is created
- Each entry stores user_id, timestamp, friend_id
- When a friend is being added, select by user_id and sort by timestamp
	- If number of returned entry is greater than threshold, pop the oldest one
	- Push in the one being added
- The published cursor is not yet reactive

--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -1,4 +1,5 @@
 <template name="profile">
+	{{#if info}}
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-6">
@@ -26,4 +27,9 @@
 			<div class="row" id="edit"><p class="text-center">Edit Profile</p></div>
 		{{/if}}
 	</div> 
+	{{else}}
+	<div class="container">
+		<div class="col-xs-9"><span><b>The user ID that you are looking for does not exist in your friend list!</b></span></div>
+	</div>
+	{{/if}}
 </template>
