Bug fix and integrated friends adding to webapp
- Comparison of template name to determine which tab is active in LinkitterList will now igore letter casing
- Implemented router for URL that triggers friendship
- Implemented addFriend template that on render it will determine if the id in HTTP get param is the same as his user_id
	- If not it will call the addFriend method on server and subscribe again to get the latest friend list
	- After successful return, automatically redirect to new friend's profile
- Migrated inline Javascript for selection of different friend adding methods to template helpers and events
	- NFC means nothing but an encoded URL which can be beamed by Android Beam to the opposite party for friendship
	- QR code is generated by Google Charts rest API
	- Email is not yet implemented

--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -41,7 +41,7 @@
   <li role="presentation" class="{{ activateTab 'linkitterList' }}">
     <a href="/link/linkitterlist">LINKITer</a>
   </li>
-  <li role="presentation" class="{{ activateTab 'Addfriend' }}">
+  <li role="presentation" class="{{ activateTab 'addFriend' }}">
     <a href="{{addfriend}}">Add LINKITer</a>
   </li>
 </template>
