Ported in Project tab

--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -30,7 +30,7 @@
 		<a href="/link/overview">Linkitter List</a>
 	</li>
 	<li class="{{ activateTab 'project' }}">
-		<a href="/projectlist">Project</a>
+		<a href="/project">Project</a>
 	</li>
 </template>
 
