--- a/client/templates/project.html
+++ b/client/templates/project.html
@@ -1,7 +1,29 @@
-<template name="homeproject">
+<template name="project">
+	<div class="container">
+		{{#each project}}
+			{{> projectlistproject}}
+		{{/each}}
+		{{#if addingProj}}
+			{{> addProjectForm}}
+		{{/if}}
+		<div class="btn-group btn-group-justified" role="group" aria-label="...">
+			{{#if addProjButton}}
+			<div class="btn-group" role="group">
+				<button type="button" id="addProj" class="btn btn-primary" style="background-color:green">
+					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+					New Project
+				</button>
+			</div>
+			{{/if}}
+		</div>
+		<div>&nbsp;</div>
+	</div>
+</template>
+
+
+<template name="projectlistproject">
         <ul class="list-group">
-            <div class="list-group-item">
-                <table border="0">
+            <div class="list-group-item"><table border="0">
                     <tr>
                         <td width="100%" rowspan="2" valign="top">
                             <div><a href="/individualproj/{{_id.toHexString}}"><h4>{{name}}</h4></a></div>
@@ -12,7 +34,8 @@
                             <div class="priject-deadline-date">{{Deadline}}</div>
                         </td>
                     </tr>
-                </table>
+                </table></div>
+            <div class="list-group-item">
                 <div class="input-group">
                     <div class="progress"><!-- Draft project plan -->
                         <div class="progress-bar"
@@ -21,6 +44,33 @@
                     </div>
                     <span class="input-group-addon">{{progress}}</span>
                 </div>
+            </div>
+            <div class="list-group-item">
+                <table border="0">
+                    <tr>
+                        <td width="100%"><h4 class="list-group-item-heading">Members</h4></td>
+                    </tr>
+                    <tr>
+                        <td calss="project-member">
+                            <img src="/images/people1.png" width="50" height="50" />
+                            <img src="/images/people2.png" width="50" height="50" />
+                            <img src="/images/people3.png" width="50" height="50" />
+                            <img src="/images/people4.png" width="50" height="50" />
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div class="list-group-item">
+                        <div width="100%"><h4 class="list-group-item-heading">Tasks</h4></div>
+                        <!-- List group -->
+                        <div>
+                        <ul style="margin-left: 0; padding: 0;">
+                            <li class="list-group-item"><span class="badge">14</span>Draft project plan</li>
+                            <li class="list-group-item"><span class="badge">2</span>Design Interface</li>
+                            <li class="list-group-item"><span class="badge">3</span>Lunch meeting with team</li>
+                            <li class="list-group-item"><span class="badge">5</span>Writing Prototype</li>
+                        </ul>
+                        </div>
             </div>
         </ul>
 </template>
