--- a/client/templates/project.html
+++ b/client/templates/project.html
@@ -7,14 +7,19 @@
 			{{> addProjectForm}}
 		{{/if}}
 		<div class="btn-group btn-group-justified" role="group" aria-label="...">
-			{{#if addProjButton}}
 			<div class="btn-group" role="group">
+			{{#if addProjButton}}
 				<button type="button" id="addProj" class="btn btn-primary" style="background-color:green">
 					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 					New Project
 				</button>
-			</div>
+			{{else}}
+				<button type="button" id="cancelProj" class="btn btn-secondary" style="background-color:red">
+					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+					Cancel
+				</button>
 			{{/if}}
+			</div>
 		</div>
 		<div>&nbsp;</div>
 	</div>
