Implemented project summary and info display
- Also fixed non activated profile tab when viewing profile by fixing the way to get current route

--- a/client/stylesheets/linkit.css
+++ b/client/stylesheets/linkit.css
@@ -45,10 +45,10 @@ html, body {
 .no-border {
     border: none!important;
 }
-.project-deadline {
+.priject-deadline {
     font-size: 18px;
 }
-.priject-deadline-date {
+.project-deadline-date {
     font-size: 28px;
     text-align: center;
 }
