--- a/client/templates/overview.html
+++ b/client/templates/overview.html
@@ -2,7 +2,7 @@
 	<!-- content -->
 	<div class="container">
 		<ul class="nav nav-tabs">
-		-	{{> list_nav}}
+		{{> list_nav}}
 		</ul>
 		<div class="row">
 		<!-- [add]
