--- a/client/templates/project.html
+++ b/client/templates/project.html
@@ -1,84 +1,174 @@
 <template name="project">
-	<div class="container">
-		{{#each selfProject}}
-			{{> projectDetails}}
-		{{/each}}
-		{{#if addingProj}}
-			{{> addProjectForm}}
-		{{/if}}
-		<div class="btn-group btn-group-justified" role="group" aria-label="...">
-			<div class="btn-group" role="group">
-			{{#if addProjButton}}
-				<button type="button" id="addProj" class="btn btn-primary" style="background-color:green">
-					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-					New Project
-				</button>
-			{{else}}
-				<button type="button" id="cancelProj" class="btn btn-secondary" style="background-color:red">
-					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-					Cancel
-				</button>
-			{{/if}}
-			</div>
-		</div>
-		<div>&nbsp;</div>
+<div class="container">
+        <ul class="list-group">
+            <div class="list-group-item"><table border="0">
+                    <tr>
+                        <td width="100%" rowspan="2" valign="top">
+                            <div><a href="/project/{{projInfo._id}}"><h4>{{projInfo.name}}</h4></a></div>
+                            <div>{{projInfo.description}}</div>
+                        </td>
+                        <td width="50" rowspan="2" valign="top">
+                            <div class="project-deadline">Deadline</div>
+                            <div class="priject-deadline-date">{{projInfo.deadline}}</div>
+                        </td>
+                    </tr>
+                </table></div>
+            <div class="list-group-item">
+                <div class="input-group">
+                    <div class="progress"><!-- Draft project plan -->
+                        <div class="progress-bar"
+                            role="progressbar"
+                            style="width: {{projInfo.progress}};"></div>
+                    </div>
+                    <span class="input-group-addon">{{projInfo.progress}}</span>
+                </div>
+            </div>
+            <div class="list-group-item">
+                <table border="0">
+                    <tr>
+                        <td width="100%"><h4 class="list-group-item-heading">Members</h4></td>
+                    </tr>
+                    <tr>
+                        <td calss="project-member">
+                            <!--<img src="/images/people1.png" width="50" height="50" />
+                            <img src="/images/people2.png" width="50" height="50" />
+                            <img src="/images/people3.png" width="50" height="50" />
+                            <img src="/images/people4.png" width="50" height="50" />-->
+			    <ul>
+			    {{#each projInfo.members}}
+			    	<li><a href="/profile/{{id}}">{{name}}</a></li>
+			    {{/each}}
+			    </ul>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div class="list-group-item active">
+                <span class="badge">
+                    <a href="#" id="addTask"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
+                </span>
+                Tasks
+            </div>
+	    <div class="list-group-item">
+	    {{#if addingTask}}
+	    	{{> addTaskForm}}
+	{{/if}}	
 	</div>
+            {{> tasklist}}
+            <div class="list-group-item active">
+                <span class="badge">
+                    <a href="/addmeeting"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
+                </span>
+                Meetings
+            </div>
+            {{> meetinglist}}
+        </ul>
+        <!-- <div class="btn-group btn-group-justified" role="group" aria-label="...">
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-primary">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit Project</button>
+            </div>
+        </div> -->
+        <div>&nbsp;</div>
+    </div>
 </template>
 
 
-<template name="projectDetails">
-	<ul class="list-group">
-		<div class="list-group-item">
-			<table border="0">
-				<tr>
-					<td width="100%" rowspan="2" valign="top">
-						<div><a href="/individualproj/{{_id.toHexString}}"><h4>{{name}}</h4></a></div>
-						<div>{{details}}</div>
-					</td>
-					<td width="50" rowspan="2" valign="top">
-						<div class="project-deadline"></div>
-						<div class="priject-deadline-date">{{deadline}}</div>
-					</td>
-				</tr>
-			</table>
-		</div>
-		<div class="list-group-item">
-			<div class="input-group">
-				<div class="progress"><!-- Draft project plan -->
-					<div class="progress-bar" role="progressbar" style="width: {{progress}};"></div>
-				</div>
-				<span class="input-group-addon">{{progress}}</span>
-			</div>
-		</div>
-		<div class="list-group-item">
-			<table border="0">
-				<tr>
-					<td width="100%"><h4 class="list-group-item-heading">Members</h4></td>
-				</tr>
-				<tr>
-					<td calss="project-member">
-						<!--    <img src="/images/people1.png" width="50" height="50" />
-						<img src="/images/people2.png" width="50" height="50" />
-						<img src="/images/people3.png" width="50" height="50" />
-						<img src="/images/people4.png" width="50" height="50" /> -->
-						{{#each members}}
-						<li><a href="/profile/{{id}}">{{name}}</a></li>
-						{{/each}}
-					</td>
-				</tr>
-			</table>
-		</div>
-		<div class="list-group-item">
-			<div width="100%"><h4 class="list-group-item-heading">Tasks</h4></div>
-			<!-- List group -->
-			<div>
-			<ul style="margin-left: 0; padding: 0;">
-				<li class="list-group-item"><span class="badge">14</span>Draft project plan</li>
-				<li class="list-group-item"><span class="badge">2</span>Design Interface</li>
-				<li class="list-group-item"><span class="badge">3</span>Lunch meeting with team</li>
-				<li class="list-group-item"><span class="badge">5</span>Writing Prototype</li>
-			</ul>
-		</div>
-	</div>
-</ul>
+<template name="tasklist">
+    {{#each tasks}}
+      {{> taskItem}}
+    {{/each}}
+</template>
+
+<template name="taskItem">
+<!-- /panel-group -->
+<div class="panel panel-default">
+    <a data-toggle="collapse"
+        data-parent="#task_list"
+        href="#{{_id}}"
+        aria-expanded="true"
+        aria-controls="{{_id}}">
+
+        <div class="panel-heading" role="tab" id="{{_id}}_2">
+            <table width="100%">
+            <tr>
+                        <td width="50" valign="top">
+                            <h4 class="panel-title">{{name}}</h4>
+                        </td>
+                        <td width="50" valign="top">
+                            <div align="right"><span class="glyphicon glyphicon-ok"></span></div>
+                        </td>
+            </tr>
+            </table>
+        </div>
+    </a>
+    <div id="{{_id}}"
+        class="panel-collapse collapse"
+        role="tabpanel"
+        aria-labelledby="{{_id}}_2">
+        <div class="panel-body">
+            <table class="taks-details-table">
+                <tr>
+                    <td>Deadline:<br/> {{time}}</td>
+                    <!-- <td>Location:<br/> {{location}}</td> -->
+                </tr>
+                <tr>
+                    <td colspan="2">Assigned to: {{assignedto}}</td>
+                </tr>
+                <tr>
+                    <td colspan="2">Description: {{Description}}</td>
+                </tr>
+                <tr>
+                    <h5> </h5>
+                    <td colspan="2"><button class="btn btn-primary btn-lg btn-block" style="background-color:white" onclick="alert('This task is set to Not finished')"><span style="color:red" class="glyphicon glyphicon-remove"></span></button></td>
+                    <td colspan="2"><button class="btn btn-primary btn-lg btn-block" style="background-color:white"  onclick="alert('This task is set to finished')"><span style="color:green" class="glyphicon glyphicon-ok"></span></button></td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
+</template>
+
+
+
+<template name="meetinglist">
+    {{#each meetings}}
+      {{> meetingItem}}
+    {{/each}}
+</template>
+
+<template name="meetingItem">
+<div class="panel panel-default">
+    <a data-toggle="collapse"
+        data-parent="#metting_list"
+        href="#{{_id}}"
+        aria-expanded="true"
+        aria-controls="{{_id}}">
+
+        <div class="panel-heading" role="tab" id="{{_id}}_2">
+            <h4 class="panel-title">{{name}}</h4>
+        </div>
+    </a>
+    <div id="{{_id}}"
+        class="panel-collapse collapse"
+        role="tabpanel"
+        aria-labelledby="{{_id}}_2">
+        <div class="panel-body">
+            <table class="taks-details-table">
+                <tr>
+                    <td>Time:<br/> {{time}}</td>
+                    <td>Location:<br/> {{location}}</td>
+                </tr>
+                    <td>Members</td>
+                    <td>Charlie, Bob</td>
+                <tr>
+                </tr>
+                <tr>
+                    <td >Description</td>
+                    <td>This meeting is about how to write the report</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div><!-- /panel-group -->
 </template>
