--- a/client/templates/projectList.html
+++ b/client/templates/projectList.html
@@ -37,7 +37,7 @@
 						<div>{{details}}</div>
 					</td>
 					<td width="50" rowspan="2" valign="top">
-						<div class="project-deadline"></div>
+						<div class="project-deadline">Deadline</div>
 						<div class="priject-deadline-date">{{deadline}}</div>
 					</td>
 				</tr>
