Differentiated project list

--- a/client/templates/projectList.html
+++ b/client/templates/projectList.html
@@ -1,6 +1,11 @@
 <template name="projectList">
 	<div class="container">
+		Your Projects:
 		{{#each selfProject}}
+			{{> projectDetails}}
+		{{/each}}
+		Projects you are in:
+		{{#each otherProject}}
 			{{> projectDetails}}
 		{{/each}}
 		<hr>
