--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -14,7 +14,7 @@
 		<!-- <div>&nbsp;</div> -->
 		<div class="panel panel-default">
 			<div class="panel-body">
-			<div><h3>Current Projects:</h3></div>
+				<div><h3>Current Projects:</h3></div>
 				{{#each project}}
 				{{> projectSummary}}
 				{{/each}}
@@ -22,7 +22,7 @@
 		</div>
 		<div class="btn-group btn-group-justified" role="group" aria-label="...">
 			<div class="btn-group" role="group">
-				<button type="button" class="btn btn-default" onclick="location.href='/addproject'">CREATE PROJECT</button>
+				<button id="addProj" type="button" class="btn btn-default">CREATE PROJECT</button>
 			</div>
 			<div class="btn-group" role="group">
 				<button type="button" class="btn btn-default" onclick="location.href='/project'">VIEW MY PROJECT</button>
