--- a/client/templates/linkitterList.html
+++ b/client/templates/linkitterList.html
@@ -4,36 +4,21 @@
 		<ul class="nav nav-tabs">
 			{{> list_nav}}
 		</ul>
-		{{> listSearch}}
-		<div class="posts">
-			{{#each friends}}
-			{{> friendListItem}}
-			{{/each}}
-		</div>
-
-		<!-- start of section "A"-->
-		<!-- <div class="page-header">
-			A
-		</div> -->
+		{{> friendListSearch}}
 	</div> 
 </template>
 
-<template name="friendListItem">
-	<div class="row friendListItem">
-		<div class="col-xs-3"><img src="{{picture}}" class="img-responsive friendListPic"></div>
-		<div class="col-xs-5 textContainer"><a href="/profile/{{user_id}}">{{name}} {{surname}}</a></div>
-		<div class="col-xs-4"><a class="btn btn-primary text-center" href="#" role="button">Add to<br>project</a></div>
+<template name="friendListSearch">
+	<form class="input-group">
+		{{> esInput index="profiles" placeholder="Search LINIKTer..." }}
+	</form>
+	<div class="posts">
+		{{#esEach index="profiles"}}
+		<div class="row friendListItem">
+			<div class="col-xs-3"><img src="{{picture}}" class="img-responsive friendListPic"></div>
+			<div class="col-xs-5 textContainer"><a href="/profile/{{user_id}}">{{name}} {{surname}}</a></div>
+			<div class="col-xs-4"><a class="btn btn-primary text-center" href="#" role="button">Add to<br>project</a></div>
+		</div>
+		{{/esEach}}
 	</div>
 </template>
-
-<template name="listSearch">
-	<form class="input-group">
-		<input type="text" class="form-control" placeholder="Search LINKITer" id="searchbox" autocomplete="off">
-		<span class="input-group-btn">
-			<button class="btn btn-primary" type="submit">
-				<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-			</button>
-		</span>
-	</form>
-</template>
-
