--- a/client/templates/taskList.html
+++ b/client/templates/taskList.html
@@ -37,6 +37,7 @@
 					<tr>
 						<td colspan="2">Description: {{details}}</td>
 					</tr>
+					{{#if taskManager}}
 					<tr>
 						<h5> </h5>
 						<td colspan="2">
@@ -50,6 +51,7 @@
 							</button>
 						</td>
 					</tr>
+					{{/if}}
 				</table>
 			</div>
 		</div>
