Extended progress bar to home and projec list

--- a/client/templates/projectList.html
+++ b/client/templates/projectList.html
@@ -51,9 +51,9 @@
 		<div class="list-group-item">
 			<div class="input-group">
 				<div class="progress"><!-- Draft project plan -->
-					<div class="progress-bar" role="progressbar" style="width: {{progress}};"></div>
+					<div class="progress-bar" role="progressbar" style="width: {{projProgress}};"></div>
 				</div>
-				<span class="input-group-addon">{{progress}}</span>
+				<span class="input-group-addon">{{projProgress}}</span>
 			</div>
 		</div>
 		<div class="list-group-item">
