--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -64,9 +64,9 @@
 			</table>
 			<div class="input-group">
 				<div class="progress"><!-- Draft project plan -->
-					<div class="progress-bar" role="progressbar" style="width: {{progress}};"></div>
+					<div class="progress-bar" role="progressbar" style="width: {{projProgress}};"></div>
 				</div>
-				<span class="input-group-addon">{{progress}}</span>
+				<span class="input-group-addon">{{projProgress}}</span>
 			</div>
 		</div>
 	</ul>
