--- a/client/templates/project.html
+++ b/client/templates/project.html
@@ -18,9 +18,9 @@
 			<div class="list-group-item">
 				<div class="input-group">
 					<div class="progress"><!-- Draft project plan -->
-						<div class="progress-bar" role="progressbar" style="width: {{projInfo.progress}};"></div>
+						<div class="progress-bar" role="progressbar" style="width: {{projProgress}};"></div>
 					</div>
-					<span class="input-group-addon">{{projInfo.progress}}</span>
+					<span class="input-group-addon">{{projProgress}}</span>
 				</div>
 			</div>
 			<div class="list-group-item">
