--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -5,7 +5,7 @@
 		{{#if editProfile}}
 		<div class="col-xs-12 col-md-6">
 			<div class="row">
-				<div class="col-xs-3"><img src="{{picture}}" alt="profile_pic" class="img-circle img-responsive"></div>
+				<div class="col-xs-3"><img src="/images/usr/people1.png" alt="profile_pic" class="img-circle img-responsive"></div>
 				<div class="col-xs-9">
 					<span>
 						<input id="name" type="text" value="{{info.name}}" placeholder="name...">
@@ -28,41 +28,37 @@
 		</div>
 		<div class="col-xs-12 col-md-12">
 			<hr>
-			<div class="row">{{info.company}}</div>
-			<hr>
-			<div class="row">{{info.description}}</div>
+			<div class="row"><textarea id="description" cols="165" rows="6" value="{{info.description}}" placeholder="description..."></textarea></div>
 		</div>
 		{{else}}
 		<div class="col-xs-12 col-md-6">
 			<div class="row">
-				<div class="col-xs-3"><img src="{{picture}}" alt="profile_pic" class="img-circle img-responsive"></div>
+				<div class="col-xs-3"><img src="/images/usr/people1.png" alt="profile_pic" class="img-circle img-responsive"></div>
 				<div class="col-xs-9"><span><b>{{info.name}} {{info.surname}}</b></span><br><span>{{info.company}}</span></div>
 			</div>
 			<hr>
 			<div class="row">
 				<table class="table borderless">	
 					<tr><td>Email</td><td>{{info.email}}</td></tr>
-					<tr><td>Phone</td><td>{{info.Phone}}</td></tr>
+					<tr><td>Phone</td><td>{{info.phone}}</td></tr>
 					<tr><td>website</td><td>{{info.website}}</td></tr>
 				</table>
 			</div>	
 		</div>
 		<div class="col-xs-12 col-md-12">
 			<hr>
-			<div class="row">{{info.company}}</div>
-			<hr>
 			<div class="row">{{info.description}}</div>
 		</div>
 
 		{{/if}}
 		</div>
-			{{#if isCurrentUser}}
-			<div class="row">
-				<button id="editProfile" class="btn btn-secondary btn-lg btn-block" style="background-color:white">
-					<span class="glyphicon glyphicon-edit"></span>{{editState}}
-				</button>
-			</div>
-			{{/if}}
+		{{#if isCurrentUser}}
+		<div class="row">
+			<button id="editProfile" class="btn btn-secondary btn-lg btn-block" style="background-color:white">
+				<span class="glyphicon glyphicon-edit"></span>{{editState}}
+			</button>
+		</div>
+		{{/if}}
 	</div> 
 	{{else}}
 	<div class="container">
