Implemented proj description on projectList,propic

--- a/client/templates/projectList.html
+++ b/client/templates/projectList.html
@@ -39,7 +39,7 @@
 				<tr>
 					<td width="100%" rowspan="2" valign="top">
 						<div><a href="/project/{{_id}}"><h4>{{name}}</h4></a></div>
-						<div>{{details}}</div>
+						<div>{{description}}</div>
 					</td>
 					<td width="50" rowspan="2" valign="top">
 						<div class="project-deadline">Deadline</div>
