--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">  
 			<div class="col-xs-1">&nbsp;</div>
-			<div class="col-xs-4"><img src="/images/people1.png" width="100" height="100" /></div>
+			<div class="col-xs-4"><img src="/images/usr/people1.png" width="100" height="100" /></div>
 			<div class="col-xs-6">
 				<div class="dashboard-name">{{userInfo.name}} {{userInfo.surname}}</div>
 				<div class="dashboard-post">{{userInfo.company}}</div>
